Se creo un resourceCollection de media, y cuando se pide todoas los medios, ya se regresan paginados.
