# storage/api-docs/api-docs.json
@@ -418,21 +418,34 @@
                                                         "type": "integer",
                                                         "example": "1"
                                                     },
-                                                    "phone_number": {
+                                                    "name": {
                                                         "type": "string",
-                                                        "example": "1234567899"
+                                                        "example": "prueba"
                                                     },
-                                                    "skype": {
+                                                    "location": {
                                                         "type": "string",
-                                                        "example": "example.skype"
+                                                        "example": "México"
+                                                    },
+                                                    "type": {
+                                                        "type": "string",
+                                                        "example": "anuncio"
+                                                    },
+                                                    "image": {
+                                                        "type": "string",
+                                                        "example": "http://localhost:8017/api/media/getImageMedia/1"
+                                                    },
+                                                    "price_per_day": {
+                                                        "type": "number",
+                                                        "format": "float",
+                                                        "example": "19.99"
                                                     },
                                                     "created_at": {
                                                         "type": "string",
-                                                        "example": "2024-12-12"
+                                                        "example": "2025-12-12"
                                                     },
                                                     "updated_at": {
                                                         "type": "string",
-                                                        "example": "2024-12-12"
+                                                        "example": "2025-12-12"
                                                     },
                                                     "deleted_at": {
                                                         "type": "string",
@@ -532,21 +545,34 @@
                                                     "type": "integer",
                                                     "example": "1"
                                                 },
-                                                "phone_number": {
+                                                "name": {
                                                     "type": "string",
-                                                    "example": "1234567899"
+                                                    "example": "prueba"
                                                 },
-                                                "skype": {
+                                                "location": {
                                                     "type": "string",
-                                                    "example": "example.skype"
+                                                    "example": "México"
+                                                },
+                                                "type": {
+                                                    "type": "string",
+                                                    "example": "anuncio"
+                                                },
+                                                "image": {
+                                                    "type": "string",
+                                                    "example": "http://localhost:8017/api/media/getImageMedia/1"
+                                                },
+                                                "price_per_day": {
+                                                    "type": "number",
+                                                    "format": "float",
+                                                    "example": "19.99"
                                                 },
                                                 "created_at": {
                                                     "type": "string",
-                                                    "example": "2024-12-12"
+                                                    "example": "2025-12-12"
                                                 },
                                                 "updated_at": {
                                                     "type": "string",
-                                                    "example": "2024-12-12"
+                                                    "example": "2025-12-12"
                                                 },
                                                 "deleted_at": {
                                                     "type": "string",
